--- a/ExtensionMethods/ExtensionMethods.csproj
+++ b/ExtensionMethods/ExtensionMethods.csproj
@@ -12,6 +12,9 @@
     <PackageProjectUrl>https://github.com/adrichem/CsvSerializer</PackageProjectUrl>
     <RepositoryUrl>https://github.com/adrichem/CsvSerializer</RepositoryUrl>
     <PackageTags>csv serialize deserialize excel</PackageTags>
+    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
