--- a/CsvSerializer/CsvSerializer.csproj
+++ b/CsvSerializer/CsvSerializer.csproj
@@ -10,7 +10,9 @@
     <PackageProjectUrl>https://github.com/adrichem/CsvSerializer</PackageProjectUrl>
     <PackageTags>csv serialize deserialize excel</PackageTags>
     <RepositoryUrl>https://github.com/adrichem/CsvSerializer</RepositoryUrl>
-    <Version>3.0.0</Version>
+    <Version>3.1.0</Version>
+    <AssemblyVersion>3.1.0.0</AssemblyVersion>
+    <FileVersion>3.1.0.0</FileVersion>
   </PropertyGroup>
 
 </Project>
